<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupMeasurementActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/setup_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/set_up_measuring_configuration"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/mode_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setup_note"
        android:text="@string/measurement_mode"
        android:textSize="16sp"
        android:layout_marginStart="16dp"/>

    <Spinner
        android:id="@+id/measurement_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mode_note"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/gain_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/measurement_mode"
        android:text="@string/gain"
        android:textSize="16sp"
        android:layout_marginStart="16dp"/>

    <Spinner
        android:id="@+id/gain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gain_note"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gain"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/integration_time"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <Button
        android:id="@+id/send_config_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/start_measuring"
        android:textColor="#D81B60" />


</RelativeLayout>