<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeasuringMenuActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/start_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_measuring_mode"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/simple_measuring_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_note"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/simple_measuring_mode"
        android:textColor="#D81B60" />

    <Button
        android:id="@+id/autoset_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/simple_measuring_button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/autoset_measuring_mode"
        android:textColor="#D81B60" />


</RelativeLayout>