<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="120dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/txtMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:minHeight="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/message" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnNeutral"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:minHeight="10dp"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>